fix: navbar disapears on mobile
weird, it was fine in previous versions

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,14 +38,14 @@
   opacity: 0.6;
 }
 
-:root .navbar {
-  backdrop-filter: blur(8px);
+:root .navbar  {
+  /* backdrop-filter: blur(8px); */
   background-color: rgba(255, 255, 255, 0.85);
   border-bottom: rgba(15, 23, 42, 0.1) solid 1px;
 }
 
 [data-theme="dark"] .navbar {
-  backdrop-filter: blur(8px);
-  background-color: rgba(11, 16, 30, 0.6);
+  /* backdrop-filter: blur(8px); */
+  background-color: rgba(11, 16, 30, 0.85);
   border-bottom: rgba(248, 250, 252, 0.1) solid 1px;
 }
